src/objects/Unit__c.object
<CustomObject>
    <description>AVB Custom Object - This object will be loaded with Unit reference data from Foundation and subsequently related to Customer Group Accounts via a join table - Customer Group Units - to allow an account to have multiple Units.</description>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affordable_Housing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affordable Housing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <description>A Unit exists within a Community (Account with Record Type=Community)</description>
        <label>Community</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Unit1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_MRI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MRI?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unit ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Status__c</fullName>
        <label>Unit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financially Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Notice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Type_Code__c</fullName>
        <label>Unit Type Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Unit</label>
    <listViews>
        <fullName>AllUnits</fullName>
        <columns>NAME</columns>
        <columns>Community__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Unit_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Units</label>
    </listViews>
    <nameField>
        <label>PBU</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>